feat: 일회성모임/정기적모임 선택 다르게 하면 각자 페이지로 넘어가게 성공

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -125,3 +125,13 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+@layer utilities {
+  .next-button {
+    @apply bg-gray-100 w-[358px] h-[53px] rounded-lg hover:border-2 hover:border-black;
+  }
+
+  .next-box {
+    @apply w-[358px] h-[82px] p-4;
+  }
+}
