--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -127,11 +127,15 @@ table {
 }
 
 @layer utilities {
+  .container {
+    @apply w-full max-w-[390px] my-0 mx-auto;
+  }
+
   .next-button {
     @apply bg-gray-100 w-[358px] h-[53px] rounded-lg hover:border-2 hover:border-black;
   }
 
   .next-box {
-    @apply w-[358px] h-[82px] p-4;
+    @apply w-[358px] p-4;
   }
 }
